--- a/moex/moex_new.rmd
+++ b/moex/moex_new.rmd
@@ -306,11 +306,12 @@ if (is.null(l_str_save['l_topVars'][[1]])) {
                                 endindex <- nrow(df_unique_variabels)
                         }
                         df_unique_variabels_selected <- df_unique_variabels[startindex:endindex,]
-                        undebug(paste_primary_summary_parallel)
+                        #undebug(paste_primary_summary_parallel)
                         l_var_parallel <- paste_primary_summary_parallel(date = topVars_date,
                                                                          df_variabels = df_unique_variabels_selected,
                                                                          df_profit = df_profitPr[index,],
-                                                                         paralleling = TRUE)
+                                                                         paralleling = TRUE,
+                                                                         knn_k = knn_k)
                         l_vars[length(l_vars)+1] <- list(convert_l_var_to_df_var(l_var = l_var_parallel))
                         df_unique_variabels[startindex:endindex,'calculated'] <- 1
                 }
@@ -337,15 +338,16 @@ if (is.null(l_str_save['l_lev1'][[1]])) {
                 
                 df_profitPr <- df_profitPrAll
                 df_profitPr[,'profit'] <- df_profit_forvard[,paste0('profit_mean_Next_',topVars_name)]
-                undebug(get_vote_train_summary_parallel)
+                #undebug(get_vote_train_summary_parallel)
                 df_vote_train_summary_parallel <- get_vote_train_summary_parallel(df_profitPr = df_profitPr,
                                                                                   df_topVars = df_topVars,
                                                                                   date = l_str_save$topVars_date[1],
-                                                                                  days_lag = days_lag, paralleling = TRUE)
+                                                                                  days_lag = days_lag, paralleling = TRUE,
+                                                                                  knn_k = knn_k)
                 l_lev1_train[topVars_name] <- list(df_vote_train_summary_parallel)
         }
         
-        source("./scripts/get_vote_train_summary_parallel.r")
+        #source("./scripts/get_vote_train_summary_parallel.r")
         # empty space at the end of train periods
         work_date <- l_str_save$work_date
         last_train_date <- max(l_lev1_train[[tail(names(l_lev1_train),1)]]$date)
@@ -356,7 +358,7 @@ if (is.null(l_str_save['l_lev1'][[1]])) {
         for (train_date_index in last_train_date_index) {
           l_str_save$work_date <- l_str_save$df_profit[train_date_index,"date"]
           l_lev1_train_empty_date[as.character(train_date_index)] <- 
-            list(get_vote_summary_parallel(df_profitPr = df_profitPrAll, l_str_save = l_str_save))
+            list(get_vote_summary_parallel(df_profitPr = df_profitPrAll, l_str_save = l_str_save, knn_k = knn_k))
           }
         df_lev1_train_empty_date <- do.call(rbind,l_lev1_train_empty_date)
         l_str_save$work_date <- work_date
@@ -376,9 +378,10 @@ if (is.null(l_str_save['l_lev1'][[1]])) {
         l_lev1['train'] <- list(l_lev1_train)
         
         ### TEST
-        undebug(get_vote_summary_parallel)
+        #undebug(get_vote_summary_parallel)
         l_lev1_test <- list(get_vote_summary_parallel(df_profitPr = df_profitPrAll,
-                                                      l_str_save = l_str_save, paralleling = TRUE))
+                                                      l_str_save = l_str_save, paralleling = TRUE, 
+                                                      knn_k = knn_k))
         l_lev1['test'] <- l_lev1_test
         
         ### UPDATE
@@ -388,7 +391,8 @@ if (is.null(l_str_save['l_lev1'][[1]])) {
   if (l_str_save$work_date != last_test_date) {
     #undebug(get_vote_summary_parallel)
     df_lev1_test <- get_vote_summary_parallel(df_profitPr = df_profitPrAll,
-                                              l_str_save = l_str_save, paralleling = TRUE)
+                                              l_str_save = l_str_save, paralleling = TRUE,
+                                              knn_k = knn_k)
     l_str_save$l_lev1$test <- rbind(l_str_save$l_lev1$test,df_lev1_test)
   }
 }
@@ -413,7 +417,7 @@ if (is.null(l_str_save['l_lev2'][[1]])) {
                 
                 ## TrainPred
                 vVars = c('prob0_up','prob0_up_sd','scater_prob0_up')
-                undebug(create_lxy_train1_train2)
+                #undebug(create_lxy_train1_train2)
                 lxy_train <- create_lxy_train1_train2(df_profitPr = df_lev1,
                                                       date = l_str_save$topVars_date, 
                                                       vVars = vVars)
@@ -443,7 +447,8 @@ if (is.null(l_str_save['l_lev2'][[1]])) {
                 df_lev1_train <- l_str_save$l_lev1$train[lev1_name][[1]]
                 df_lev1_test  <- l_str_save$l_lev1$test
                 index_test_lev1 <- which(df_lev1_test$MA == lev1_name)
-                df_lev1_test <- df_lev1_test[index_test_lev1,c(2:8)]
+                df_lev1_test <- df_lev1_test[index_test_lev1,c('date','prob0_up_sd','prob0_down_sd','scater_prob0_up',
+                                                               'scater_prob0_down','prob0_up','prob0_down','n')]
                 df_lev1 <- rbind(df_lev1_train,df_lev1_test)
                 vVars = c('prob0_up','prob0_up_sd','scater_prob0_up')
                 df_lev1 <- df_lev1[,c('date',vVars)]
@@ -456,7 +461,7 @@ if (is.null(l_str_save['l_lev2'][[1]])) {
                 # prediction
                 index_train <- ((df_lev1$date < l_str_save$work_date) & (complete.cases(df_lev1)))
                 index_predict <- which((df_lev1$date == l_str_save$work_date) & (complete.cases(df_lev1[,c(vVars)])))
-                debug(create_X_y)
+                #debug(create_X_y)
                 l <- create_X_y(df = df_lev1,
                                 train_index = index_train,
                                 test_index = index_predict,
@@ -480,7 +485,8 @@ if (is.null(l_str_save['l_lev2'][[1]])) {
                 df_lev1_train <- l_str_save$l_lev1$train[lev1_name][[1]]
                 df_lev1_test  <- l_str_save$l_lev1$test
                 index_test_lev1 <- which(df_lev1_test$MA == lev1_name)
-                df_lev1_test <- df_lev1_test[index_test_lev1,c(2:8)]
+                df_lev1_test <- df_lev1_test[index_test_lev1,c('date','prob0_up_sd','prob0_down_sd','scater_prob0_up',
+                                                               'scater_prob0_down','prob0_up','prob0_down','n')]
                 df_lev1 <- rbind(df_lev1_train,df_lev1_test)
                 vVars = c('prob0_up','prob0_up_sd','scater_prob0_up')
                 df_lev1 <- df_lev1[,c('date',vVars)]
@@ -771,16 +777,23 @@ l_strategies[vStrategy] <- list(df_strategy_vote)
 source("./scripts/count_lev3.r")
 vFiles <- list.files("./data/vote/")
 l_strategies <- list()
-for(vFile in vFiles[1:10]) {
+stoplevel <- 0
+for(vFile in vFiles) {
   l_str_save <- readRDS(paste0("./data/vote/",vFile))
   df_lev3 <- l_str_save[['df_lev3']]
   #debug(count_lev3)
   #l_lev3 <- count_lev3(l_str_save = l_str_save,only_workdate = FALSE)
   #df_lev3 <- l_lev3$df_lev3
-  
+  #stoplevel <- stoplevel+1
   df_lev3$strategy <- vFile
+  #df_lev3$stoplevel <- stoplevel
+  
+  if (grepl("m", vFile) == T) {
+    df_lev3$type <- 'mod'
+  } else {
+    df_lev3$type <- 'base'
+  }
   l_strategies[vFile] <- list(df_lev3)
-
 
 # df_lev2_train <- l_str_save$l_lev2$train[['20']]
 # df_lev2_test <- l_str_save$l_lev2$test[which(l_str_save$l_lev2$test$MA == '20'), c("date","profit_pred")]
@@ -839,11 +852,12 @@ df_strategies <- do.call(rbind,l_strategies)
 ```
 
 
-```{r}
-vote_level <- 12
-df_strategies %>%
+```{r, warning=FALSE, message=FALSE}
+l_best_test_vote_level <- list()
+for (vote_level in 0:12) {
+df_best_test_vote_level <- df_strategies %>%
  filter(date < ymd('20200401'),
-        date > start_date
+        #date < start_date
         ) %>%
   mutate(profit_ma = if_else(vote >= vote_level, profit, 0),
          n_ma = if_else(vote >= vote_level, 1, 0)) %>%
@@ -855,13 +869,48 @@ df_strategies %>%
             pr_up = sum(profit_ma, na.rm = T),
             pr_diff = (pr_up - pr),
             n(),
-            sum(n_ma))
+            n_ma = sum(n_ma, na.rm = T),
+            vote_level)
+
+l_best_test_vote_level[vote_level] <- list(df_best_test_vote_level)
+}
+df_best_test_vote_level <- do.call(rbind, l_best_test_vote_level)
+df_best_test_vote_level <- df_best_test_vote_level %>%
+  group_by(strategy) %>%
+  mutate(max_pr_diff = max(pr_diff)) %>%
+  arrange(strategy, desc(pr_diff)) %>%
+  filter(pr_diff == max_pr_diff) %>%
+  mutate(best_vote_lev = vote_level) %>%
+  select(strategy,best_vote_lev)
+
+df_strategies <- merge(df_strategies,df_best_test_vote_level, all.x = T, by = 'strategy')
 ```
+
+```{r}
+vote_level <- 7
+df_strategies %>%
+ filter(date < ymd('20200401'),
+        #date > start_date
+        ) %>%
+  mutate(profit_ma = if_else(vote >= best_vote_lev, profit, 0),
+         n_ma = if_else(vote >= best_vote_lev, 1, 0)) %>%
+  group_by(type,
+           test = date > start_date,
+           #year(date)
+           ) %>%
+  summarise(pr = sum(profit, na.rm = T),
+            pr_up = sum(profit_ma, na.rm = T),
+            pr_diff = (pr_up - pr),
+            n(),
+            n_ma = sum(n_ma, na.rm = T),
+            vote_level)
+```
+
 
 ```{r}
 source("./scripts/saveGGplot.r")
 branch <- "./plots/vote/"
-for(vFile in vFiles[1:10]) {
+for(vFile in vFiles) {
   for (vote_level in 0:12) {
 
 df_all <- df_strategies %>%
@@ -871,10 +920,10 @@ df_all <- df_strategies %>%
          vyear = year(date)) %>%
   mutate(profit_cum = if_else(is.na(profit),0,profit),
          lev2 = if_else(is.na(lev2),0,lev2),
-         profit_cum_l2 = if_else(lev2 >= vote_level, profit_cum ,0)) %>%
+         profit_l2 = if_else(lev2 >= vote_level, profit_cum ,0)) %>%
   mutate(profit_cum = cumsum(profit_cum),
          lev2_cum = cumsum(lev2),
-         profit_cum_l2 = cumsum(profit_cum_l2),
+         profit_cum_l2 = cumsum(profit_l2),
          profit_diff = profit_cum_l2 - profit_cum)
 
 df_test <- df_strategies %>%
@@ -885,11 +934,14 @@ df_test <- df_strategies %>%
          vyear = year(date)) %>%
   mutate(profit_cum = if_else(is.na(profit),0,profit),
          lev2 = if_else(is.na(lev2),0,lev2),
-         profit_cum_l2 = if_else(lev2 >= vote_level, profit_cum ,0)) %>%
+         profit_l2 = if_else(lev2 >= vote_level, profit_cum ,0)) %>%
   mutate(profit_cum = cumsum(profit_cum),
          lev2_cum = cumsum(lev2),
-         profit_cum_l2 = cumsum(profit_cum_l2),
+         profit_cum_l2 = cumsum(profit_l2),
          profit_diff = profit_cum_l2 - profit_cum)
+
+tt_all <- ((length(which(df_all$lev2 >= vote_level))-length(which(df_test$lev2 >= vote_level)))/(nrow(df_all)-nrow(df_test)))*100
+tt_test <- length(which(df_test$lev2 >= vote_level))/nrow(df_test)*100
 
   sGGplot <- ggplot() +
   geom_point(aes(x = date, y = profit_cum), alpha = 0.1, data = df_all) +
@@ -897,11 +949,15 @@ df_test <- df_strategies %>%
   geom_point(aes(x = date, y = profit_cum_l2), color = 'blue', alpha = 0.1, data = df_all) +
   geom_vline(xintercept = start_date) +
   geom_point(aes(x = date, y = profit_cum), alpha = 0.1, data = df_test) +
-  geom_point(aes(x = date, y = profit_diff), color = 'green', alpha = 0.1, data = df_test) +
+  geom_point(aes(x = date, y = profit_diff), color = 'darkgreen', alpha = 0.1, data = df_test) +
   geom_point(aes(x = date, y = profit_cum_l2), color = 'blue', alpha = 0.1, data = df_test) +
-  ggtitle(paste0(vFile,"  Vote level: ",vote_level))
+  ggtitle(paste0(vFile,"  Vote level: ",vote_level)) + 
+    annotate(geom="text", x=ymd('20110601'), y=100, 
+             label=paste0("Train trade time: ",round(tt_all,1),'%')) + 
+    annotate(geom="text", x=ymd('20110601'), y=90, 
+             label=paste0("Test trade time: ",round(tt_test,1),'%'))
 
-    saveGGplot(sGGplot,branch,paste0(vFile,'_vl_',vote_level))
+      saveGGplot(sGGplot,branch,paste0(vFile,'_vl_',vote_level))
   }
 }
 opendir(branch)
@@ -909,24 +965,30 @@ opendir(branch)
 
 
 ```{r}
-vote_level <- 0
+vote_level <- 10
 df_strategies_m <- df_strategies %>%
   filter(#date < start_date,
-    date < ymd('20200401')) %>%
-  mutate(npv_up0 = if_else(vote >= vote_level, vote, 0),
-         profit_up0 = if_else(vote >= vote_level, profit, 0)) %>%
+    date < ymd('20200401'),
+         type == 'mod') %>%
+  mutate(npv_up0 = if_else(vote >= vote_level, npv_p, 0)) %>%
   group_by(date) %>%
   mutate(n_up0 = n(),
-         #npv_up0 = if_else(n_up0 >= 3, npv_up0, 0),
          sum_npv_up0 = sum(npv_up0)) %>%
   mutate(pers = npv_up0/sum_npv_up0) %>%
   mutate(pers = if_else(is.nan(pers), 0, pers)) %>%
   mutate(pers = if_else(is.na(pers), 0, pers)) %>%
-  #mutate(pers_sd = sd(pers, na.rm = T)) %>%
-  #mutate(pers = if_else(pers > .35, .35, pers)) %>%
   mutate(money = 0,
          money_m = 0) %>%
-  arrange(date)
+  arrange(date, stoplevel) %>%
+  mutate(pers_pr = lag(pers),
+         pers_next = lead(pers),
+         pers_pr = if_else(is.na(pers_pr),pers,pers_pr),
+         pers_next = if_else(is.na(pers_next),pers,pers_next),
+         pers_all = if_else(pers != 0, pers+pers_pr+pers_next,0),
+         sum_pers = sum(pers_all),
+         pers = if_else(sum_pers == 0,0, pers_all/sum_pers),
+         profit_up0 = if_else(vote >= vote_level, profit, 0)) %>%
+  mutate(profit_up0 = if_else(is.na(profit_up0), 0, profit_up0))
 
 vdays <- unique(df_strategies_m$date)
 vmoney_m <- 100
@@ -943,14 +1005,14 @@ for (vday in vdays) {
     }
   }
   
-  # index <- df_strategies_m$date == vday
-  # df_strategies_m[index,'money_m'] <- (k*df_strategies_m[index,'pers']*vmoney_m)*((df_strategies_m[index,"profit"])/100)+
-  #   vmoney_m/nrow(df_strategies_m[index,])
-  # vmoney_m <- sum(df_strategies_m[index,'money_m'])
-    index <- df_strategies_m$date == vday
-  df_strategies_m[index,'money_m'] <- (k*vmoney_m/nrow(df_strategies_m[index,]))*((df_strategies_m[index,"profit_up0"])/100)+
+  index <- df_strategies_m$date == vday
+  df_strategies_m[index,'money_m'] <- (k*df_strategies_m[index,'pers']*vmoney_m)*((df_strategies_m[index,"profit"])/100)+
     vmoney_m/nrow(df_strategies_m[index,])
   vmoney_m <- sum(df_strategies_m[index,'money_m'])
+  #   index <- df_strategies_m$date == vday
+  # df_strategies_m[index,'money_m'] <- (k*vmoney_m/nrow(df_strategies_m[index,]))*((df_strategies_m[index,"profit_up0"])/100)+
+  #   vmoney_m/nrow(df_strategies_m[index,])
+  # vmoney_m <- sum(df_strategies_m[index,'money_m'])
   
   df_strategies_m[index,'money'] <- (k*vmoney/nrow(df_strategies_m[index,]))*((df_strategies_m[index,"profit"])/100)+
     vmoney/nrow(df_strategies_m[index,])
@@ -967,7 +1029,7 @@ gg_train <- df_strategies_mm %>%
   ggplot() +
   geom_point(aes(x=date, y = money), color = 'red', alpha = 0.2) +
   geom_point(aes(x=date, y = money_m), color = 'green', alpha = 0.2) +
-  #ylim(0,15000)+
+  ylim(0,500)+
   ggtitle('train')
 
 gg_test <- df_strategies_mm %>%
@@ -976,7 +1038,7 @@ gg_test <- df_strategies_mm %>%
   ggplot() +
   geom_point(aes(x=date, y = money), color = 'red', alpha = 0.2) +
   geom_point(aes(x=date, y = money_m), color = 'green', alpha = 0.2) +
-  #ylim(0,120)+
+  ylim(50,120)+
   ggtitle('test')
 
 df_strategies_m %>%
@@ -994,6 +1056,7 @@ df_strategies_m %>%
 df_strategies_m %>%
   filter(date > start_date,
           date < ymd('20200401')) %>%
+  arrange(stoplevel) %>%
   ggplot() +
   geom_point(aes(x = date, y = strategy, size = pers), alpha = 0.2, color = 'green')
   # scale_color_gradient2(midpoint=0, limit = c(-2,2), space = "Lab",
